# mini-ai-cup-3

./: .gitignore  CMakeLists.txt  Constants.cpp  Constants.h  GameState.cpp  GameState.h  Makefile  Randomizer.cpp  Randomizer.h  RewindClient.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  c_onstants.cpp  c_onstants.h  constants.h  main.cpp  s_olution.cpp  s_olution.h  s_olver.cpp  s_olver.h  solution.h
chipmunk/include/: chipmunk_private.h  chipmunk_structs.h  cpRobust.h
chipmunk/src/: chipmunk.c  cpArbiter.c  cpArray.c  cpBBTree.c  cpBody.c  cpCollision.c  cpConstraint.c  cpDampedRotarySpring.c  cpDampedSpring.c  cpGearJoint.c  cpGrooveJoint.c  cpHashSet.c  cpHastySpace.c  cpMarch.c  cpPinJoint.c  cpPivotJoint.c  cpPolyShape.c  cpPolyline.c  cpRatchetJoint.c  cpRobust.c  cpRotaryLimitJoint.c  cpShape.c  cpSimpleMotor.c  cpSlideJoint.c  cpSpace.c  cpSpaceComponent.c  cpSpaceDebug.c  cpSpaceHash.c  cpSpaceQuery.c  cpSpaceStep.c  cpSpatialIndex.c  cpSweep1D.c
chipmunk_src/: CMakeLists.txt
chipmunk_src/include/chipmunk/: chipmunk.h  chipmunk_private.h
chipmunk_src/src/: cpArray.c  cpBBTree.c  cpBody.c  cpDampedSpring.c  cpGearJoint.c  cpHastySpace.c  cpPolyShape.c  cpPolyline.c  cpRotaryLimitJoint.c  cpSpace.c  cpSpaceStep.c  cpSweep1D.c  heap.c
random/: Randomizer.cpp
simulation/: Car.cpp  Car.h  Deadline.cpp  Deadline.h  Map.cpp  Map.h  Simulation.cpp  Simulation.h  Simulator.cpp  Simulator.h  TrashLine.cpp  TrashLine.h  utils.hpp
solution/: Constants.cpp  Constants.h  RewindClient.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  main.cpp
solution/random/: Randomizer.cpp  Randomizer.h
solution/simulation/: Car.cpp  Car.h  Deadline.cpp  Map.cpp  Map.h  Simulation.cpp  Simulation.h  utils.hpp
